[project]
name = "adblock-rules"
version = "0.1.0"
description = ""
authors = [{ name = "Hiroaki Kataoka", email = "k_hir@hotmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "requests>=2.28.2,<3",
    "beautifulsoup4>=4.11.2,<5",
]

[tool.uv.build-backend]
module-name = ["adblock_rules"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
